welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:10: error: ';' expected but '(' found.
	var T: array(a,b,c,d);
                    ^